--- a/whatsHappening-backend/app/javascript/components/index.html
+++ b/whatsHappening-backend/app/javascript/components/index.html
@@ -5,48 +5,34 @@
 </head>
 <body>
 
-  <div class='site-wrapper'>
-    <header class='site-header'>
-
-      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="#">What's Happening?</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto mx-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Near Me<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Map</a>
-              </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-          </div>
-        </nav>  
-        
-    </header>
-    <div class='homepage-map'>
-      <div class='search-form'>
-          <div class="row">
-              <div class="col-lg-4 col-lg-offset-4">
-                  <div class="input-group">
-                      <input type="text" class="form-control" /> 
-                      <span class="input-group-btn">
-                          <button class="btn btn-default" type="button">Go!</button>
-                      </span>
-                  </div><!-- /input-group -->
-              </div><!-- /.col-lg-4 -->
-          </div><!-- /.row -->
+<div class='site-wrapper'>
+  <header class='site-header'>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">What's Happening?</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto mx-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Near Me<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Map</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
       </div>
-    </div>
-    <footer class='site-footer'>&copy; 2018 What's Happening Pty Ltd.</footer>
-  </div>
+    </nav>      
+  </header>
+    <div class='site-content'></div>
+    <div class='site-main'>HELLO</div>
+  <footer class='site-footer'>&copy; 2018 What's Happening Pty Ltd.</footer>
+</div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
