--- a/whatsHappening-backend/app/javascript/styles/application.css
+++ b/whatsHappening-backend/app/javascript/styles/application.css
@@ -45,6 +45,13 @@ body {
   background-size: 100% auto;
 }
 
+.map-content {
+  grid-row-start: 2;
+  grid-row-end: 3;
+  grid-column-start: 1;
+  grid-column-end: 4;
+}
+
 .site-main {
   grid-row-start: 1;
   grid-row-end: 1;
