--- a/whatsHappening-backend/app/assets/stylesheets/application.scss
+++ b/whatsHappening-backend/app/assets/stylesheets/application.scss
@@ -79,3 +79,17 @@ h1 {
 .paddingBelow {
   height: 100px;
 }
+.floatRight {
+  float: right;
+}
+.inline {
+  display: inline;
+}
+#userNew {
+  width: 18%;
+  margin: 10% auto;
+}
+#test1 {
+  width: 200px;
+  height: 200px;
+}
