--- a/whatsHappening-backend/app/javascript/styles/mapbox.css
+++ b/whatsHappening-backend/app/javascript/styles/mapbox.css
@@ -3,8 +3,8 @@
     overflow: hidden;
     position: relative;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
-    height: 100%;
-    width: 1000px;
+    height: 672px;
+    width: 100%;
 }
 .mapboxgl-map:-webkit-full-screen {
     width: 100%;
@@ -13,7 +13,8 @@
 
 .mapboxgl-missing-css {
     display: none;
-}
+} 
+
 
 .mapboxgl-canvas-container.mapboxgl-interactive,
 .mapboxgl-ctrl-nav-compass {
