--- a/whatsHappening-backend/app/javascript/styles/mapbox.css
+++ b/whatsHappening-backend/app/javascript/styles/mapbox.css
@@ -5,6 +5,7 @@
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     height: 100%;
     width: 1000px;
+    z-index: -1;
 }
 .mapboxgl-map:-webkit-full-screen {
     width: 100%;
