--- a/whatsHappening-backend/app/views/session/new.html.erb
+++ b/whatsHappening-backend/app/views/session/new.html.erb
@@ -1,14 +1,7 @@
-        <Navbar color="light" light expand="lg">
-          <NavbarBrand href="/#/">What's Happening?</NavbarBrand>
-          <Nav className="ml-auto" navbar>
-            {this.state.user ? 
-              <NavItem>
-                <NavLink className="inline floatRight" href="/logout">Logout</NavLink>
-                <NavLink className="inline floatRight" href="/#/profile">Profile</NavLink>
-              </NavItem>
-              : <NavLink href="/login">Login</NavLink>}
-          </Nav>
-        </Navbar>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/#/">What's Happening?</a>
+</nav>
+
 <div id="userNew">
 <h2>Login</h2>
 
