--- a/whatsHappening-backend/app/javascript/styles/mapbox.css
+++ b/whatsHappening-backend/app/javascript/styles/mapbox.css
@@ -4,7 +4,7 @@
     position: relative;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     height: 672px;
-    width: 100%;
+    width: calc(100% - 2px);
 }
 .mapboxgl-map:-webkit-full-screen {
     width: 100%;
