--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,7 +75,7 @@ h1, h2 {
 .bottomShow {
   background: white;
   padding: 20px 30px;
-  height: 550px;
+  overflow: auto;
 }
 .leftMiddleShowDiv {
   width: 750px;
@@ -126,9 +126,11 @@ h1, h2 {
 .typeHeader {
   margin-left: 50px;
   margin-right: 14px;
+  padding-left: 5px;
 }
 .locationHeader {
   margin-left: 16px;
+  padding-left: 5px;
 }
 .headerSearch {
   position: relative;
@@ -139,4 +141,33 @@ h1, h2 {
   color: grey;
   font-size: 12px;
   font-style: italic;
+}
+// .happenings-list {
+//   border: 1px solid black;
+// }
+.scroll-bottom i {
+  position: relative;
+  padding-top: 15px;
+  margin-left: 50%;
+  margin-right: auto;
+}
+.fa-angle-down {
+  color: #000;
+  font-size: 1.7rem;
+}
+.bounce-down {
+  -moz-animation: bounce 2.5s infinite;
+  -webkit-animation: bounce 2.5s infinite;
+  animation: bounce 2.5s infinite;
+}
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-15px);
+  }
+  60% {
+    transform: translateY(-10px);
+  }
 }
