--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WhatsHappeningBackend</title>
+    <title>What's Happening? - Find happenings, events and things to do wherever you are ...</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
